--- a/home.html
+++ b/home.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Art3001 Workshop 1</title>
 </head>
+
 <body>
-    
+    <p>Today is Tuesday </p>
 </body>
+
 </html>
