Created index.html files
for blog, exercises and projects

--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <title>Art3001 Workshop 1</title>
 </head>
 <body>
-    <p>Today is Tuesday </p>
+    <header>
+        <nav>
+            Link1 Link2 Link3
+        </nav>
+    </header>
+
+
+
+    <p>Today is Tuesday. Let's see if this works. It does! </p>
+
+
+
+
+    <footer>A Lucia Perfumo Production</footer>
 </body>
 
 </html>
