--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
 </head>
 <body>
     <header>
+        <h1>Lucia Perfumo</h1>
         <nav>
-            Link1 Link2 Link3
+           <a href="blog">Blog</a>
+           <a href="exercises">Exercises</a>
+           <a href="projects">Projects</a>
         </nav>
     </header>
 
 
 
-    <p>Today is Tuesday. Let's see if this works. It does! </p>
+    <p>Let's see if this works. It does! </p>
 
 
 
