--- a/exercises/index.html
+++ b/exercises/index.html
@@ -5,6 +5,11 @@
     <title>Exercises</title>
 </head>
 <body>
-    <h1>Exercises</h1>
+    <header>
+        <h1>Exercises</h1>
+    </header>
+    <nav>
+        <a href="ex-1">Exercise 1</a>
+    </nav>
 </body>
 </html>
