--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <a href="exercises">Exercises</a>
             <br>
            <a href="projects">Projects</a>
+           <hr>
+           <h3>Playground</h3>
+           <a href="playground/div.html">div<a>
         </nav>
     </header>
 
