--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html >
 <head>
     <title>Art3001 Workshop 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -14,18 +15,24 @@
            <a href="projects">Projects</a>
            <hr>
            <h3>Playground</h3>
-           <a href="playground/div.html">div<a>
+           <a href="playground/extra-tags.html">div<a>
         </nav>
     </header>
 
     <hr>
 
     <p>Welcome to my first website! </p>
+    <p class="unique-class blue-text">Let's practice something new</p>
+
+    <ul>
+        <li style="color: #ffa07a; text-transform: uppercase; text-shadow: 0 0 7px lightsalmon;">Hello</li>
+        <li style="color: slateblue; text-transform: uppercase;">there</li>
+    </ul>
 
 
 
 
-    <footer>A Lucia Perfumo Production</footer>
+    <footer class="unique-class">A Lucia Perfumo Production</footer>
 </body>
 
 </html>
