--- a/exercises/ex-1/entrance.html
+++ b/exercises/ex-1/entrance.html
@@ -13,7 +13,30 @@
 <br>
     <p>
         As you walk in, there is a bulletin board across the room that displays the town <a href="map.html">map</a>. You look <br><br>down and see a variety of tracks from different animals. As you look around the room,<br><br> there seems to be three passages. <a href="badger.html">Amara the badger</a> seems to be home since you hear <br><br>chatter. You smell something wonderful coming from <a href="armadillo.html">Roman the armadillo</a>'s burrow.<br><br> <a href="raccoon.html">Elsie the raccoon</a> doesn't seem to be home but it wouldn't hurt to check. All paths will <br><br>take you to your new home. 
-        
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="../index.html">back</a>
     </p>
     
 </body>
