--- a/exercises/ex-1/index.html
+++ b/exercises/ex-1/index.html
@@ -13,6 +13,30 @@
 <br>
 <br>
     <p style="text-align-last: center;">"We are so happy you decided to join our community. I am Willow the prairie dog, and I run <br><br> the town council here in the burrow. I would love to give you a tour, but I am currently very <br><br>busy. Although, this will be a wonderful opportunity for you to meet your other neighbors. <br><br>We are such a close-knit community that we decided to connect all our homes. You will first <br><br>head down the path to the <a href="entrance.html">community burrow</a> where all of us here go to enjoy time together <br><br>outside our homes. I need to head out now, but all of us here are glad to see a new face." </p>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <a href="../index.html">back</a>
    
 </body>
 </html>
