--- a/exercises/index.html
+++ b/exercises/index.html
@@ -10,6 +10,8 @@
     </header>
     <nav>
         <a href="ex-1">Exercise 1</a>
+        <br>
+        <a href="ex-2">Exercise 2</a>
     </nav>
     <a href="../index.html">back</a>
 </body>
