--- a/exercises/index.html
+++ b/exercises/index.html
@@ -12,7 +12,11 @@
         <a href="ex-1">Exercise 1</a>
         <br>
         <a href="ex-2">Exercise 2</a>
+        <br>
+        <br>
+        <a href="../index.html">Back</a>
     </nav>
-    <a href="../index.html">back</a>
+    
+    
 </body>
 </html>
