Blog update and blog e
blog page updated and added entry for blog e

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="blog/index.html">BLOG</a>
                         </nav> 
                     </div>
-                    <a href="../blog/index.html"><img src="img/bubble2bg.png" alt="" width="250"></a>
+                    <a href="blog/index.html"><img src="img/bubble2bg.png" alt="" width="250"></a>
                 </div>
                 <div class="exercises flexc letterspace">
                     <div class="exercisestext">
