--- a/projects/index.html
+++ b/projects/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Projects</h1>
+    <div class="wrapper">
+        <div class="container">
+            <div class="gengrid">
+                <header>
+                    <div class="project flexcb">PROJECTS</div>
+                    <div class="navigation">
+                        <div class="home flexc">
+                             <nav>
+                            <a href="../index.html">HOME</a>
+                            </nav> 
+                        </div>
+                        <div class="about flexc">
+                            <nav>
+                                <a href="">ABOUT</a>
+                            </nav> 
+                        </div>
+                        <div class="contact flexc"> 
+                            <nav>
+                            <a href="">CONTACT</a>
+                            </nav> 
+                        </div>
+                    </div>
+                </header>
+                <div class="projectbox">
+                    <div class="projecttext flexc letterspace">
+                        <nav>
+                            <a href="finalp/index.html">FINAL PROJECT</a>
+                        </nav>
+                    </div>
+                    <div class="projimg">
+                        <a href="finalp/index.html"><img src="../img/Rectange.png" alt="" width="1145" height="200"></a>
+                    </div>
+                </div> 
+            </div>
+        </div>
+    </div>
 </body>
 </html>
