--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="stylesheet" href="bubble.css"> -->
-    <link rel="stylesheet" href="bubble2.css">
+    <link rel="stylesheet" href="bubble.css">
 </head>
 
 <body>
