Project 1 About and Contact edit

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                         </div>
                         <div class="about flexc">
                             <nav>
-                                <a href="">ABOUT</a>
+                                <a href="about/index.html">ABOUT</a>
                             </nav>
                         </div>
                         <div class="contact flexc">
                             <nav>
-                                <a href="">CONTACT</a>
+                                <a href="contact/index.html">CONTACT</a>
                             </nav>
                         </div>
                     </div>
