--- a/about/index.html
+++ b/about/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>About</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="wrapper">
         <div class="container">
             <div class="gengrid">
                 <header>
-                    <div class="project flexcb">PROJECTS</div>
+                    <div class="abouttop flexcb">ABOUT</div>
                     <div class="navigation">
                         <div class="home flexc">
                              <nav>
@@ -23,7 +21,7 @@
                         </div>
                         <div class="about flexc">
                             <nav>
-                                <a href="../about/index.html">ABOUT</a>
+                                <a href="index.html">ABOUT</a>
                             </nav> 
                         </div>
                         <div class="contact flexc"> 
@@ -33,15 +31,11 @@
                         </div>
                     </div>
                 </header>
-                <div class="projectbox">
-                    <div class="projecttext flexc letterspace">
-                        <nav>
-                            <a href="finalp/index.html">FINAL PROJECT</a>
-                        </nav>
+                <div class="aboutbox">
+                    <div class="abouttext flexc bigletterspace">
+                        LUCIA PERFUMO 
                     </div>
-                    <div class="projimg">
-                        <a href="finalp/index.html"><img src="../img/Rectange.png" alt="" width="1145" height="200"></a>
-                    </div>
+                    
                 </div> 
             </div>
         </div>
