--- a/contact/index.html
+++ b/contact/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="wrapper">
         <div class="container">
             <div class="gengrid">
                 <header>
-                    <div class="project flexcb">PROJECTS</div>
+                    <div class="contacttop flexcb">CONTACT</div>
                     <div class="navigation">
                         <div class="home flexc">
                              <nav>
@@ -28,21 +26,19 @@
                         </div>
                         <div class="contact flexc"> 
                             <nav>
-                            <a href="../contact/index.html">CONTACT</a>
+                            <a href="index.html">CONTACT</a>
                             </nav> 
                         </div>
                     </div>
                 </header>
-                <div class="projectbox">
-                    <div class="projecttext flexc letterspace">
-                        <nav>
-                            <a href="finalp/index.html">FINAL PROJECT</a>
-                        </nav>
+                <div class="contactbox">
+                    <div class="contacttext flexc bigletterspace">
+                        LUCIA PERFUMO
+                        <div class="information">EMAIL: perfumo.2@osu.edu</div>
                     </div>
-                    <div class="projimg">
-                        <a href="finalp/index.html"><img src="../img/Rectange.png" alt="" width="1145" height="200"></a>
-                    </div>
+                    
                 </div> 
+                
             </div>
         </div>
     </div>
