main page edit portfolio
added in the link to the portfolio text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="portfolio flexc letterspace">
                     <div class="portfoliotext">
                         <nav>
-                            <a href="">PORTFOLIO</a>
+                            <a href="https://www.luciaperfumoportfolio.com/">PORTFOLIO</a>
                         </nav>
                     </div>
                     <a href="https://www.luciaperfumoportfolio.com/" target="_blank"><img src="img/bubble1bg.png" alt=""
