Final Project First Final Trial

--- a/projects/index.html
+++ b/projects/index.html
@@ -36,11 +36,11 @@
                 <div class="projectbox">
                     <div class="projecttext flexc letterspace">
                         <nav>
-                            <a href="finalp/index.html">FINAL PROJECT</a>
+                            <a href="Twine/Napeteccas.html">FINAL PROJECT</a>
                         </nav>
                     </div>
                     <div class="projimg">
-                        <a href="finalp/index.html"><img src="../img/Rectange.png" alt="" width="1145" height="200"></a>
+                        <a href="Twine/Napeteccas.html"><img src="../img/Rectange.png" alt="" width="1145" height="200"></a>
                     </div>
                 </div> 
             </div>
